# pointcloud_align

./: CMakeLists.txt  package.xml
include/pointcloud_align/: misaligned.hpp  pointcloud_align.hpp
launch/: church_align.launch  get_relative_tf.launch  longshaw_long_L.launch  longshaw_long_path.launch  save_path_csv.launch  workshop_crazy_align.launch  workshop_kidnap_align.launch
rviz/: church.rviz  crazy.rviz  kidnap.rviz  viz.rviz
src/: main.cpp  misaligned.cpp  pointcloud_align.cpp  transform_trajectories.cpp
